[project]
name = "lineageimpact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
    "matplotlib>=3.10.1",
    "nx-arangodb>=1.3.0",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "openai>=1.65.3",
    "langsmith>=0.3.11",
    "langchain-core>=0.3.41",
    "gradio>=5.3.0",
    "tabulate>=0.9.0",
    "plotly>=6.0.0",
    "langchain-anthropic>=0.3.9",
]
